kubernetes/apps/external-endpoints/services/app/proxmox/endpointslice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pve
  labels:
    kubernetes.io/service-name: pve
addressType: IPv4
endpoints:
  - addresses:
      - 10.10.99.104
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: https
    port: 8006
    protocol: TCP
    appProtocol: https
