kubernetes/apps/external-endpoints/services/app/proxmox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app pve
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      url: "https://pve.dcunha.io"
      group: homelab
      interval: 1m
      ui:
        hide-hostname: true
        hide-url: true
      conditions:
        - "[STATUS] == 200"
spec:
  ports:
    - name: https
      port: 8006
      protocol: TCP
      targetPort: 8006
      appProtocol: https
  clusterIP: None
