kubernetes/apps/external-endpoints/services/app/proxmox/backendtrafficpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: pve-backend
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: pve
  connection:
    bufferLimit: 8Mi
  timeout:
    http:
      requestTimeout: 0s
      connectionIdleTimeout: 3600s
